--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
         </div>
     </div>
 
+    <!-- Tombol Logout -->
+    <div class="logout-bar">
+        <button onclick="logout()">Logout</button>
+    </div>
+
     <div class="chat-container">
         <div class="chat-messages" id="chatMessages">
             <!-- Chat messages will appear here -->
