--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -33,7 +33,7 @@
             <div class="message" id="loginMessage"></div>
 
             <div class="footer">
-                <p>&copy; 2025 Terminal Auth System. <a href="register.html" style="color: var(--terminal-blue)">Register</a></p>
+                <p>&copy; Created by FajarRamadhan. <a href="register.html" style="color: var(--terminal-blue)">Register</a></p>
             </div>
         </div>
     </div>
