--- a/public/auth/register.html
+++ b/public/auth/register.html
@@ -41,7 +41,7 @@
             <div class="message" id="registerMessage"></div>
 
             <div class="footer">
-                <p>&copy; 2025 Terminal Auth System. <a href="login.html" style="color: var(--terminal-blue)">Login</a></p>
+                <p>&copy; Created by FajarRamadhan. <a href="login.html" style="color: var(--terminal-blue)">Login</a></p>
             </div>
         </div>
     </div>
